# minicrusher

./: stack.xml  start_minicrusher_teleop.launch
minicrusher_base/: CMakeLists.txt  mainpage.dox  manifest.xml  start_minicrusher_base.launch
minicrusher_base/include/minicrusher_base/: mc_base.h  mc_structs.h
minicrusher_base/src/: mc_base.cpp  mc_driver_node.cpp
minicrusher_base/standalone/: check_mc_comms.cpp  verify_checksum.cpp
minicrusher_msgs/: mainpage.dox  manifest.xml
minicrusher_msgs/msg/: Encoder.msg  EncoderArray.msg
